Revise user profiles in index.html
Updated profiles with new names, roles, and LinkedIn links.

--- a/index.html
+++ b/index.html
@@ -236,27 +236,27 @@
             <div class="card-header">
               <img
                 src="https://via.placeholder.com/150"
-                alt="Headshot of David Martinez"
+                alt="Headshot of Mohammed Abdelmuati"
                 class="avatar"
               />
               <div class="name-line">
-                <div class="name">David Martinez</div>
-                <div class="line">Initiated: SP18</div>
+                <div class="name">Mohammed Abdelmuati</div>
+                <div class="line">Initiated: SP24</div>
               </div>
             </div>
             <div class="meta">
               <div>
                 <span class="meta-label">Degree &amp; Grad Year:</span>
-                B.A. Economics ’20
+                B.A. Philosophy ’24
               </div>
               <div>
                 <span class="meta-label">Current Role &amp; Company:</span>
-                Financial Analyst @ Goldman Sachs
+                Outbound Sales Development Representative @ BREX
               </div>
             </div>
             <a
               class="linkedin-btn"
-              href="https://www.linkedin.com/"
+              href="https://www.linkedin.com/in/mo-abdelmuati/"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -272,27 +272,27 @@
             <div class="card-header">
               <img
                 src="https://via.placeholder.com/150"
-                alt="Headshot of Aaron Butler"
+                alt="Headshot of Senay Zedingel"
                 class="avatar"
               />
               <div class="name-line">
-                <div class="name">Aaron Butler</div>
-                <div class="line">Initiated: FA24</div>
+                <div class="name">Senay Zedingel</div>
+                <div class="line">Initiated: FA22</div>
               </div>
             </div>
             <div class="meta">
               <div>
                 <span class="meta-label">Degree &amp; Grad Year:</span>
-                B.S. Computer Science &amp; Linguistics ’28
+                B.A. Political Science ’25
               </div>
               <div>
                 <span class="meta-label">Current Role &amp; Company:</span>
-                Data Analyst Intern @ WagerWire
+                Legislative Fellow @ California State Assembly
               </div>
             </div>
             <a
               class="linkedin-btn"
-              href="https://www.linkedin.com/"
+              href="https://www.linkedin.com/in/senay-zedingel/"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -308,27 +308,27 @@
             <div class="card-header">
               <img
                 src="https://via.placeholder.com/150"
-                alt="Headshot of Jordan Smith"
+                alt="Headshot of Stacy Aneke"
                 class="avatar"
               />
               <div class="name-line">
-                <div class="name">Jordan Smith</div>
-                <div class="line">Initiated: SP23</div>
+                <div class="name">Stacy Aneke</div>
+                <div class="line">Initiated: SP20</div>
               </div>
             </div>
             <div class="meta">
               <div>
                 <span class="meta-label">Degree &amp; Grad Year:</span>
-                B.S. Mechanical Engineering ’26
+                B.A. Linguistics & Psychology ’20
               </div>
               <div>
                 <span class="meta-label">Current Role &amp; Company:</span>
-                Engineering Intern @ Northrop Grumman
+                Clinical Mental Health Counselor
               </div>
             </div>
             <a
               class="linkedin-btn"
-              href="https://www.linkedin.com/"
+              href="https://www.linkedin.com/in/stacy-aneke-21b363225/"
               target="_blank"
               rel="noopener noreferrer"
             >
